feat(self-hosting): Phase 11 — ラウンドトリップ検証でパーサー自己ホスティング達成
ParserGenerator で生成した UBNFParsers が ubnf.ubnf 自身を
完全にパースできることを SelfHostingRoundTripTest で検証。

検証フロー:
  ubnf.ubnf → ParserGenerator → UBNFParsers.java (生成ソース)
    → javac (--enable-preview) → .class (tmpDir)
    → URLClassLoader + getRootParser() 反射呼び出し
    → parse(ubnf.ubnf) → 成功 + 全入力消費

バグ修正 (UBNFMapper.toTokenDecl):
  IdentifierParser が UBNFLazyChain のため trailing SPACE が CPPComment を
  消費し、source.toString() にコメントテキストが混入していた。
  firstWord() ヘルパーで最初の空白文字以降を除去して修正。

  修正前: Parser.get(IdentifierParser\n\n// ===== コメント =====.class)
  修正後: Parser.get(IdentifierParser.class)

SelfHostingTest にコンパイル検証テスト追加 (+1)
SelfHostingRoundTripTest 新規追加 (4テスト)
全215テスト合格

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>